Add developer API errors
